# insto

./: .gitignore  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODOS.md  mkdocs.yml  pyproject.toml
.github/plans/: aiograpi-direct-readonly-design.md  aiograpi-direct-readonly-plan.md
.github/workflows/: ci.yml  docs.yml  pr-title.yml  release-please.yml  release.yml
docs/: architecture.md  backends.md  basic-usage.md  cli-reference.md  demo.tape  index.md  installation.md  killer-features.md  recipes.md  roadmap.md  troubleshooting.md
insto/: __init__.py  __main__.py  _redact.py  _version.py  cli.py  config.py  exceptions.py  models.py  repl.py
insto/backends/: __init__.py  _aiograpi_map.py  _base.py  _cdn.py  _fake.py  _hiker_map.py  _retry.py  aiograpi.py  hiker.py
insto/commands/: __init__.py  _base.py  batch.py  content.py  direct.py  discovery.py  dossier.py  interactions.py  media.py  network.py  operational.py  places.py  profile.py  saved.py  target.py  watch.py
insto/service/: __init__.py  analytics.py  exporter.py  facade.py  history.py  metrics.py  watch.py
insto/ui/: __init__.py  banner.py  progress.py  render.py  theme.py
marketing/: why-instagram-bans-your-osint-account.md
scripts/: render_social_preview.py
tests/: __init__.py  fakes.py  test_aiograpi_backend_direct.py  test_aiograpi_backend_login.py  test_aiograpi_info_e2e.py  test_aiograpi_map.py  test_aiograpi_private_graphql_audit.py  test_aiograpi_saved_feed_audit.py  test_analytics.py  test_backend_contract.py  test_cdn.py  test_cli.py  test_commands_base.py  test_commands_batch.py  test_commands_content.py  test_commands_direct.py  test_commands_discovery.py  test_commands_dossier.py  test_commands_interactions.py  test_commands_media.py  test_commands_network.py  test_commands_operational.py  test_commands_profile.py  test_commands_saved.py  test_commands_target.py  test_commands_watch.py  test_commands_where_etc.py  test_config.py  test_exceptions.py  test_exporter.py  test_exporter_maltego.py  test_facade.py  test_hiker_backend.py  test_hiker_map.py  test_history.py  test_metrics.py  test_models.py  test_redact.py  test_release_please_config.py  test_render.py  (+6 more)
tests/e2e/: conftest.py  test_oneshot.py  test_repl_session.py  test_watch_tick.py
tests/fixtures/hiker/: comment_basic.json  comment_reply.json  comment_schema_drift.json  highlight_basic.json  highlight_schema_drift.json  post_carousel.json  post_image.json  post_schema_drift.json  post_video.json  profile_deleted.json  profile_empty.json  profile_private.json  profile_public.json  profile_schema_drift.json  story_image.json  story_schema_drift.json  story_video.json  user_short.json  user_short_schema_drift.json
tests/live/: aiograpi_info_e2e.py  aiograpi_private_graphql_audit.py  aiograpi_saved_feed_audit.py  smoke.py
