[project]
name = "insto"
version = "0.1.0"
description = "Interactive Instagram OSINT CLI on the HikerAPI backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "subzeroid" }]
keywords = ["instagram", "osint", "cli", "repl", "hikerapi", "intelligence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "hikerapi>=0.1.0",
    "httpx>=0.27",
    "prompt_toolkit>=3.0.43",
    "rich>=13.7",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/subzeroid/insto"
Documentation = "https://subzeroid.github.io/insto/"
Repository = "https://github.com/subzeroid/insto"
Issues = "https://github.com/subzeroid/insto/issues"
Changelog = "https://github.com/subzeroid/insto/blob/main/CHANGELOG.md"

[project.optional-dependencies]
completion = ["shtab>=1.7"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10",
]

[project.scripts]
insto = "insto.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["insto"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "N", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"insto/exceptions.py" = ["N818"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["hikerapi", "hikerapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "e2e: end-to-end tests that exercise the CLI / REPL via the fake backend",
]
